# whisper

./: CMakeLists.txt  README.md  macros.cmake  variables.cmake  version.cmake  version.rc.in
src/: CMakeLists.txt  libclient.cmake  libcommon.cmake  libserver.cmake
src/client/: CMakeLists.txt  ConnectingWidget.qml  ContactListScreen.qml  HandshakeDialog.qml  LockScreen.qml  LoginScreen.qml  OldUserDialog.qml  SetPasswordDialog.qml  SplashScreen.qml  main.cpp  main.qml  resource.qrc
src/client_app/: CMakeLists.txt
src/libclient/src/: CMakeLists.txt  ClientSqliteDataStorage.cpp  ContactListModel.cpp  IClientDataStorage.h  clientcommandprocessor.cpp  clientcommandprocessor.h  clientconnectionstate.h  clientcontroller.cpp  clientcontroller.h  clientprocessor.cpp  clientprocessor.h  clientsqlitedatastorage.cpp  clientsqlitedatastorage.h  contact.h  contactlistmodel.cpp  contactlistmodel.h  controller.cpp  controller.h  iclientdatastorage.h  libclient_export.h
src/libcommon/src/: CMakeLists.txt  Connection.cpp  Connection.h  Controller.cpp  Controller.h  DataStorage.h  Packet.h  SessionHandler.cpp  SessionHandler.h  commandprocessor.cpp  commandprocessor.h  connection.cpp  connection.h  crypto.h  (+15 more)
src/libs/: CMakeLists.txt  client.cmake  common.cmake  server.cmake
src/server/: CMakeLists.txt  main.cpp
src/server_app/: CMakeLists.txt  main.cpp
src/simpleclient/: CMakeLists.txt  FirstTimeSetPassword.qml  LoginScreen.qml  UserTypeSelection.qml  UserVerification.qml  WaitGeneratingKeys.qml  main.cpp  main.qml  resource.qrc
src/visualserver/: CMakeLists.txt  main.cpp
(+82 files in other folders)
