find_package(OpenSSL REQUIRED)

set(ADDITIONAL_INCLUDE_DIRECTORIES ${ADDITIONAL_INCLUDE_DIRECTORIES} ${OPENSSL_INCLUDE_DIR})
set(ADDITIONAL_LINK_LIBRARIES ${ADDITIONAL_LINK_LIBRARIES} ${OPENSSL_LIBRARIES})

message("Using OpenSSL ${OPENSSL_VERSION}")

build_shared_library(libcommon WHISPER_LIBCOMMON_EXPORT)
